--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/edniltonmartins/mean-estudo#readme",
   "dependencies": {
-    "express": "^4.15.4"
+    "ejs": "^2.5.7",
+    "express": "^4.15.4",
+    "express-load": "^1.1.16"
   }
 }
